--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description" : "Simple Express Application",
     "version" : "0.0.1",
     "dependencies" : {
-        "express" : "3.x",
+        "express" : "3.x"
     },
     "engines" : {
         "node" : "0.8.4",
